# spaceautomats

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: app.rs  bin.rs  lib.rs  spaceautomat.rs  ui.rs
src/physmodel/: mod.rs  spaceobject.rs
src/plasma/: mod.rs
src/spaceautomat/: dev_plasmacannon.rs  dev_propulsion.rs  dev_reaction_wheel.rs  dev_scanner.rs  device.rs  mod.rs  ship.rs
tests/: basic_lib_test.rs  myautomat.lua  spray.lua
