[package]
name = "spaceautomats_simulation"
version = "0.1.0"
edition = "2021"

[lib]
name = "spaceautomats"
path = "src/lib.rs"

[[bin]]
name = "spaceautomats_start"
path = "src/bin.rs"

[dependencies]
argparse = "0.2.2"
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
rand = "0.10.1"
ratatui = "0.30.0"
